force-app/main/default/objects/Event_Attendance__c/Event_Attendance__c.object-meta.xml
<CustomObject>
    <label>Event Attendance</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>