force-app/main/default/objects/Event_Attendance__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Event Attendance</relationshipLabel>
    <relationshipName>Event_Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>